deployment/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autodoc
  labels:
    app.kubernetes.io/part-of: autodoc
